unpackaged/main/default/objects/BusinessAccount/fields/Account_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Account_Duplicate__c</fullName>
    <label>Account Duplicate</label>
    <length>60</length>
    <type>Text</type>
</CustomField>