unpackaged/main/default/objects/BusinessAccount/fields/Account_Funding_Client__c.field-meta.xml
<CustomField>
    <fullName>Account_Funding_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Annual Funding Client</label>
    <type>Checkbox</type>
</CustomField>