unpackaged/main/default/objects/BusinessAccount/fields/Account_Funding_Next_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Funding_Next_Service_Date__c</fullName>
    <label>Annual Funding Next Service Date</label>
    <type>Date</type>
</CustomField>