unpackaged/main/default/objects/BusinessAccount/fields/ACR_Keep_or_Delete__c.field-meta.xml
<CustomField>
    <fullName>ACR_Keep_or_Delete__c</fullName>
    <description>Field Just for Salesforce data clean up project. Can be deleted once it is finished.</description>
    <label>ACR Keep or Delete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>