unpackaged/main/default/objects/BusinessAccount/fields/American_Funds_F2_Addendum_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>American_Funds_F2_Addendum_Signed_Date__c</fullName>
    <label>American Funds F2 Addendum Signed Date</label>
    <type>Date</type>
</CustomField>