unpackaged/main/default/objects/BusinessAccount/fields/AML_Documentation__c.field-meta.xml
<CustomField>
    <fullName>AML_Documentation__c</fullName>
    <label>AML Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>State Issued Photo ID</fullName>
            </value>
            <value>
                <fullName>US Issued Photo ID</fullName>
            </value>
            <value>
                <fullName>Background Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>