unpackaged/main/default/objects/BusinessAccount/fields/AML_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>AML_Expiration_Date__c</fullName>
    <label>AML Expiration Date</label>
    <type>Date</type>
</CustomField>