unpackaged/main/default/objects/BusinessAccount/fields/AML_Valid__c.field-meta.xml
<CustomField>
    <fullName>AML_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AML Valid</label>
    <type>Checkbox</type>
</CustomField>