unpackaged/main/default/objects/BusinessAccount/fields/AMS_Addendum_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>AMS_Addendum_Signed_Date__c</fullName>
    <label>AMS Addendum Signed Date</label>
    <type>Date</type>
</CustomField>