unpackaged/main/default/objects/BusinessAccount/fields/Approximate_Annual_Income_All_Sources__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Annual_Income_All_Sources__c</fullName>
    <label>Approximate Annual Income (All Sources)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>