unpackaged/main/default/objects/BusinessAccount/fields/Approximate_Highest_Tax_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Highest_Tax_Bracket__c</fullName>
    <label>Approximate Highest Tax Bracket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-10%</fullName>
            </value>
            <value>
                <fullName>11%-20%</fullName>
            </value>
            <value>
                <fullName>21-30%</fullName>
            </value>
            <value>
                <fullName>31%-40%</fullName>
            </value>
            <value>
                <fullName>41% or higher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>