unpackaged/main/default/objects/BusinessAccount/fields/Approximate_Liquid_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Liquid_Net_Worth__c</fullName>
    <label>Approximate Liquid Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>