unpackaged/main/default/objects/BusinessAccount/fields/Bill_to_Group__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill to Group?</label>
    <type>Checkbox</type>
</CustomField>