unpackaged/main/default/objects/BusinessAccount/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch Allocation</fullName>
            </value>
            <value>
                <fullName>External Billing - Diversify Insurance</fullName>
            </value>
            <value>
                <fullName>External Billing - FirstPurpose Tax</fullName>
            </value>
            <value>
                <fullName>External Billing - FPW CFO Services</fullName>
            </value>
            <value>
                <fullName>Membership Billing</fullName>
            </value>
            <value>
                <fullName>No Billing</fullName>
            </value>
            <value>
                <fullName>No Billing - Home Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>