unpackaged/main/default/objects/BusinessAccount/fields/Bonds_Investment_Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>Bonds_Investment_Years_Experience__c</fullName>
    <label>Bonds Investment Years Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>