unpackaged/main/default/objects/BusinessAccount/fields/CaliberRedtailId__c.field-meta.xml
<CustomField>
    <fullName>CaliberRedtailId__c</fullName>
    <externalId>true</externalId>
    <label>CaliberRedtailId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>