unpackaged/main/default/objects/BusinessAccount/fields/Cash_Checking__c.field-meta.xml
<CustomField>
    <fullName>Cash_Checking__c</fullName>
    <label>Cash/Checking</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>