unpackaged/main/default/objects/BusinessAccount/fields/CCD_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>CCD_Signed_Date__c</fullName>
    <label>CCD Signed Date</label>
    <type>Date</type>
</CustomField>