unpackaged/main/default/objects/BusinessAccount/fields/Client_Profile_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Profile_Signed_Date__c</fullName>
    <label>Client Profile Signed Date</label>
    <type>Date</type>
</CustomField>