unpackaged/main/default/objects/BusinessAccount/fields/Country_ID__c.field-meta.xml
<CustomField>
    <fullName>Country_ID__c</fullName>
    <label>Country Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>