unpackaged/main/default/objects/BusinessAccount/fields/CRD_Number__c.field-meta.xml
<CustomField>
    <fullName>CRD_Number__c</fullName>
    <description>CRD Number for Registered Persons.</description>
    <label>CRD Number</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>