unpackaged/main/default/objects/BusinessAccount/fields/Current_Employer_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Current_Employer_Maestro__c</fullName>
    <formula>LEFT(FinServ__CurrentEmployer__pc, 40)</formula>
    <label>Current Employer</label>
    <type>Text</type>
</CustomField>