unpackaged/main/default/objects/BusinessAccount/fields/Current_Plan_Provider_s__c.field-meta.xml
<CustomField>
    <fullName>Current_Plan_Provider_s__c</fullName>
    <description>Incumbent provider(s) on a retirement plan prospect. Mirrors Lead.Current_Plan_Provider_s__c via the Current Plan Provider(s) global value set.</description>
    <label>Current Plan Provider(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Plan_Provider_s</valueSetName>
    </valueSet>
</CustomField>