unpackaged/main/default/objects/BusinessAccount/fields/Customer_Advisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Advisor_Name__c</fullName>
    <formula>IF(
    TEXT(Billing_Method__c) = &quot;Membership Billing&quot;,
    IF(
        Bill_to_Self__c,
        FirstName &amp; &quot; &quot; &amp; LastName,
        IF(
            Bill_to_Group__c,
            Advisor_Group__r.Name,
            Bill_To__r.FirstName &amp; &quot; &quot; &amp; Bill_To__r.LastName
        )
    ),
    Advisor_Group__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>- If Billing Method is Membership Billing AND Bill to self is TRUE: Account Name
- If Billing Method is Membership Billing AND Bill to Group is TRUE: Advisor Group Name
- If Billing Method is Membership Billing AND Bill to self &amp; group are FALSE: Bill To
- Everything else: Advisor Group Name</inlineHelpText>
    <label>Customer-Advisor Name</label>
    <type>Text</type>
</CustomField>