unpackaged/main/default/objects/BusinessAccount/fields/Date_of_Formation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Formation__c</fullName>
    <label>Date of Formation</label>
    <type>Date</type>
</CustomField>