unpackaged/main/default/objects/BusinessAccount/fields/DMS_Addendum_on_File__c.field-meta.xml
<CustomField>
    <fullName>DMS_Addendum_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box should be checked when a home office employee has verified that the client has signed a DMS addendum.</description>
    <inlineHelpText>This box should be checked when a home office employee has verified that the client has signed a DMS addendum.</inlineHelpText>
    <label>DMS Addendum on File</label>
    <type>Checkbox</type>
</CustomField>