unpackaged/main/default/objects/BusinessAccount/fields/DocuSignIOBalanced__c.field-meta.xml
<CustomField>
    <fullName>DocuSignIOBalanced__c</fullName>
    <label>DocuSignIOBalanced</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>