unpackaged/main/default/objects/BusinessAccount/fields/DocuSignIOWealthAccumulation__c.field-meta.xml
<CustomField>
    <fullName>DocuSignIOWealthAccumulation__c</fullName>
    <label>DocuSignIOWealthAccumulation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>