unpackaged/main/default/objects/BusinessAccount/fields/DocuSignLNVery__c.field-meta.xml
<CustomField>
    <fullName>DocuSignLNVery__c</fullName>
    <formula>ISPICKVAL(Liquidity_Needs__c, &#39;Very Important&#39;)</formula>
    <label>DocuSignLNVery</label>
    <type>Checkbox</type>
</CustomField>