unpackaged/main/default/objects/BusinessAccount/fields/DocuSignNonDiscretionary__c.field-meta.xml
<CustomField>
    <fullName>DocuSignNonDiscretionary__c</fullName>
    <formula>ISPICKVAL(Authority__c,&#39;Non-Discretionary basis&#39;)</formula>
    <label>DocuSignNonDiscretionary</label>
    <type>Checkbox</type>
</CustomField>