unpackaged/main/default/objects/BusinessAccount/fields/DocuSignRTAggressive__c.field-meta.xml
<CustomField>
    <fullName>DocuSignRTAggressive__c</fullName>
    <formula>ISPICKVAL(Risk_Tolerance__c,&#39;Aggressive&#39;)</formula>
    <label>DocuSignRTAggressive</label>
    <type>Checkbox</type>
</CustomField>