unpackaged/main/default/objects/BusinessAccount/fields/DocuSignRTConservative__c.field-meta.xml
<CustomField>
    <fullName>DocuSignRTConservative__c</fullName>
    <formula>ISPICKVAL(Risk_Tolerance__c,&#39;Conservative&#39;)</formula>
    <label>DocuSignRTConservative</label>
    <type>Checkbox</type>
</CustomField>