unpackaged/main/default/objects/BusinessAccount/fields/DocuSignRTModeratelyAggressive__c.field-meta.xml
<CustomField>
    <fullName>DocuSignRTModeratelyAggressive__c</fullName>
    <formula>ISPICKVAL(Risk_Tolerance__c,&#39;Moderately Aggressive&#39;)</formula>
    <label>DocuSignRTModeratelyAggressive</label>
    <type>Checkbox</type>
</CustomField>