unpackaged/main/default/objects/BusinessAccount/fields/DocuSignRTModeratelyConservative__c.field-meta.xml
<CustomField>
    <fullName>DocuSignRTModeratelyConservative__c</fullName>
    <formula>ISPICKVAL(Risk_Tolerance__c,&#39;Moderately Conservative&#39;)</formula>
    <label>DocuSignRTModeratelyConservative</label>
    <type>Checkbox</type>
</CustomField>