unpackaged/main/default/objects/BusinessAccount/fields/DocuSignTH4to6__c.field-meta.xml
<CustomField>
    <fullName>DocuSignTH4to6__c</fullName>
    <formula>ISPICKVAL(Time_Horizon__c,&#39;4 to 6 years&#39;)</formula>
    <label>DocuSignTH4to6</label>
    <type>Checkbox</type>
</CustomField>