unpackaged/main/default/objects/BusinessAccount/fields/DocuSignTH7to8__c.field-meta.xml
<CustomField>
    <fullName>DocuSignTH7to8__c</fullName>
    <formula>ISPICKVAL(Time_Horizon__c,&#39;7 to 8 years&#39;)</formula>
    <label>DocuSignTH7to8</label>
    <type>Checkbox</type>
</CustomField>