unpackaged/main/default/objects/BusinessAccount/fields/Donation_in_Kind_Client__c.field-meta.xml
<CustomField>
    <fullName>Donation_in_Kind_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the client does donations in kind every year.</inlineHelpText>
    <label>Donation in Kind Client</label>
    <type>Checkbox</type>
</CustomField>