unpackaged/main/default/objects/BusinessAccount/fields/Donation_in_Kind_Next_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Donation_in_Kind_Next_Service_Date__c</fullName>
    <inlineHelpText>This is the day the workflow will automatically launch next.</inlineHelpText>
    <label>Donation in Kind Next Service Date</label>
    <type>Date</type>
</CustomField>