unpackaged/main/default/objects/BusinessAccount/fields/Email_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Email_Maestro__c</fullName>
    <formula>LEFT(PersonEmail, 50)</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>