unpackaged/main/default/objects/BusinessAccount/fields/Employed_by_Sec_Industry_Regulator__c.field-meta.xml
<CustomField>
    <fullName>Employed_by_Sec_Industry_Regulator__c</fullName>
    <description>Broker Dealer Affiliation - Employed by or associated with the securities industry or a financial regulator?</description>
    <label>Employed by Sec Industry/Regulator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>