unpackaged/main/default/objects/BusinessAccount/fields/Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Employer_City__c</fullName>
    <label>Employer City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>