unpackaged/main/default/objects/BusinessAccount/fields/Employer_Street__c.field-meta.xml
<CustomField>
    <fullName>Employer_Street__c</fullName>
    <label>Employer Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>