unpackaged/main/default/objects/BusinessAccount/fields/Employer_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Employer_Zip_Code__c</fullName>
    <label>Employer Zip Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>