unpackaged/main/default/objects/BusinessAccount/fields/Energy_Programs__c.field-meta.xml
<CustomField>
    <fullName>Energy_Programs__c</fullName>
    <label>Energy Programs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>