unpackaged/main/default/objects/BusinessAccount/fields/Entity_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Entity_Jurisdiction__c</fullName>
    <label>Entity Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>