unpackaged/main/default/objects/BusinessAccount/fields/EPS_Addendum_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>EPS_Addendum_Signed_Date__c</fullName>
    <label>EPS Addendum Signed Date</label>
    <type>Date</type>
</CustomField>