unpackaged/main/default/objects/BusinessAccount/fields/Estimated_AUM__c.field-meta.xml
<CustomField>
    <fullName>Estimated_AUM__c</fullName>
    <description>Assets the prospect is expected to bring under management, used for pipeline sizing. Mirrors Lead.Estimated_AUM__c. Distinct from Approximate Total Assets, which is a suitability measure of assets held anywhere.</description>
    <inlineHelpText>Assets we expect to manage for this prospect. For total assets held anywhere, use Approximate Total Assets.</inlineHelpText>
    <label>Estimated AUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>