unpackaged/main/default/objects/BusinessAccount/fields/Exchange_Proceeds_at_QI__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Proceeds_at_QI__c</fullName>
    <label>Exchange Proceeds at QI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>