unpackaged/main/default/objects/BusinessAccount/fields/External_Referrer__c.field-meta.xml
<CustomField>
    <fullName>External_Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Referrer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (External Referrer)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>