unpackaged/main/default/objects/BusinessAccount/fields/FAs_for_Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>FAs_for_Primary_Owner__c</fullName>
    <label>FAs for Primary Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>