unpackaged/main/default/objects/BusinessAccount/fields/Fee_Based_AUM__c.field-meta.xml
<CustomField>
    <fullName>Fee_Based_AUM__c</fullName>
    <description>Fee-based portion of the prospect&#39;s assets under management. Mirrors Lead.Fee_Based_AUM__c.</description>
    <label>Fee-Based AUM</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>