unpackaged/main/default/objects/BusinessAccount/fields/Fee_Disbursement_Account__c.field-meta.xml
<CustomField>
    <fullName>Fee_Disbursement_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Disbursement Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>Accounts (Fee Disbursement Account)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>