unpackaged/main/default/objects/BusinessAccount/fields/Financial_Accounts_Created_During_Wizard__c.field-meta.xml
<CustomField>
    <fullName>Financial_Accounts_Created_During_Wizard__c</fullName>
    <label>Financial Accounts Created During Wizard</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>