unpackaged/main/default/objects/BusinessAccount/fields/Financial_Advisor_Team__c.field-meta.xml
<CustomField>
    <fullName>Financial_Advisor_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Financial Advisor Team</label>
    <referenceTo>Financial_Advisor_Team__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>