unpackaged/main/default/objects/BusinessAccount/fields/Head_of_Household__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>