unpackaged/main/default/objects/BusinessAccount/fields/IMA_Disbursement_Wizard_Account__c.field-meta.xml
<CustomField>
    <fullName>IMA_Disbursement_Wizard_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IMA Disbursement Wizard Account</label>
    <referenceTo>Financial_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>