unpackaged/main/default/objects/BusinessAccount/fields/IMA_Ops_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>IMA_Ops_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IMA Ops Reviewed</label>
    <type>Checkbox</type>
</CustomField>