unpackaged/main/default/objects/BusinessAccount/fields/Important_Information_Rich__c.field-meta.xml
<CustomField>
    <fullName>Important_Information_Rich__c</fullName>
    <label>Important Information (Rich)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>