unpackaged/main/default/objects/BusinessAccount/fields/Income_Code_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Income_Code_Maestro__c</fullName>
    <formula>1</formula>
    <label>Income Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>