unpackaged/main/default/objects/BusinessAccount/fields/Individual_Stocks_Investment_Years_Exp__c.field-meta.xml
<CustomField>
    <fullName>Individual_Stocks_Investment_Years_Exp__c</fullName>
    <label>Individual Stocks Investment Years Exp</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>