unpackaged/main/default/objects/BusinessAccount/fields/Investment_Objective_Ranked__c.field-meta.xml
<CustomField>
    <fullName>Investment_Objective_Ranked__c</fullName>
    <label>Investment Objective (Ranked)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>