unpackaged/main/default/objects/BusinessAccount/fields/Investment_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Investment_Objectives__c</fullName>
    <label>Investment Objectives</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Balanced</fullName>
            </value>
            <value>
                <fullName>Speculation</fullName>
            </value>
            <value>
                <fullName>Capital Preservation</fullName>
            </value>
            <value>
                <fullName>Legacy Investing</fullName>
            </value>
            <value>
                <fullName>Preserve Wealth</fullName>
                <isActive>false</isActive>
                <label>Preserve Wealth</label>
            </value>
            <value>
                <fullName>Wealth Accumulation</fullName>
                <isActive>false</isActive>
                <label>Wealth Accumulation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>