unpackaged/main/default/objects/BusinessAccount/fields/Jurisdiction_of_Formation__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_of_Formation__c</fullName>
    <label>Jurisdiction of Formation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>