unpackaged/main/default/objects/BusinessAccount/fields/Liquid_Assets_Value_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Liquid_Assets_Value_Maestro__c</fullName>
    <formula>SUBSTITUTE(
    SUBSTITUTE(
        TEXT(
            BLANKVALUE(
                Household__r.Total_Liquid_Assets__c,
                BLANKVALUE(Household__r.Approximate_Liquid_Net_Worth__c, 1)
            )
        ),
        &quot;,&quot;, &quot;&quot;
    ),
    &quot;.&quot;, &quot;&quot;
)</formula>
    <label>Liquid Assets Value</label>
    <type>Text</type>
</CustomField>