unpackaged/main/default/objects/BusinessAccount/fields/Liquidity_Needs__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Needs__c</fullName>
    <label>Liquidity Needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Important</fullName>
            </value>
            <value>
                <fullName>Somewhat Important</fullName>
            </value>
            <value>
                <fullName>Not Important</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>