unpackaged/main/default/objects/BusinessAccount/fields/Liquidity_Needs_Further_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Needs_Further_Explanation__c</fullName>
    <label>Liquidity Needs - Further Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>