unpackaged/main/default/objects/BusinessAccount/fields/Lump_Sum_Pension_s__c.field-meta.xml
<CustomField>
    <fullName>Lump_Sum_Pension_s__c</fullName>
    <label>Lump Sum Pension(s)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>