unpackaged/main/default/objects/BusinessAccount/fields/Maestro_Check__c.field-meta.xml
<CustomField>
    <fullName>Maestro_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maestro Check</label>
    <type>Checkbox</type>
</CustomField>