unpackaged/main/default/objects/BusinessAccount/fields/Market_Value_of_Interval_Funds_Owned__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_of_Interval_Funds_Owned__c</fullName>
    <label>Market Value of Interval Funds Owned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>