unpackaged/main/default/objects/BusinessAccount/fields/Market_Value_of_Sec_Inv_RE_Owned__c.field-meta.xml
<CustomField>
    <fullName>Market_Value_of_Sec_Inv_RE_Owned__c</fullName>
    <label>Market Value of Sec Inv RE Owned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>