unpackaged/main/default/objects/BusinessAccount/fields/Mortgage_Payable_on_Non_Sec_Inv_RE_Owned__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Payable_on_Non_Sec_Inv_RE_Owned__c</fullName>
    <label>Mortgage Payable on Non-Sec Inv RE Owned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>