unpackaged/main/default/objects/BusinessAccount/fields/Name_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Business__c</fullName>
    <label>Name of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>