unpackaged/main/default/objects/BusinessAccount/fields/Name_of_Company_and_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Company_and_Symbol__c</fullName>
    <label>Name of Company and Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>