unpackaged/main/default/objects/BusinessAccount/fields/Net_Worth_Excluding_Primary_Residence__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth_Excluding_Primary_Residence__c</fullName>
    <label>Net Worth Excluding Primary Residence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>