unpackaged/main/default/objects/BusinessAccount/fields/Number_of_Dependents_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dependents_Maestro__c</fullName>
    <formula>TEXT(FinServ__NumberOfDependents__pc)</formula>
    <label>Number of Dependents</label>
    <type>Text</type>
</CustomField>