unpackaged/main/default/objects/BusinessAccount/fields/OMS_Addendum_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>OMS_Addendum_Signed_Date__c</fullName>
    <label>OMS Addendum Signed Date</label>
    <type>Date</type>
</CustomField>