unpackaged/main/default/objects/BusinessAccount/fields/Other_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Business_Type__c</fullName>
    <label>Other Business Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>