unpackaged/main/default/objects/BusinessAccount/fields/Other_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Email_2__c</fullName>
    <description>Used by Finance/Billing previously for license reconciliation. Historical email data point that they think would be useful.</description>
    <label>Other Email 2</label>
    <type>Email</type>
</CustomField>