unpackaged/main/default/objects/BusinessAccount/fields/Other_Employment_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Employment_Status_Description__c</fullName>
    <label>Other Employment Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>